--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Xiang Cheng / Personal Homepage"
 title_separator          : "-"
 name                     : &name "Xiang Cheng"
 description              : &description "a third-year undergraduate student from Renmin University of China"
-url                      : "https://xcharliecheng.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://xcharliecheng.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "XCharlieCHENG/academicpages.github.io" 
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
