--- a/_config.yml
+++ b/_config.yml
@@ -88,6 +88,7 @@ author:
 #   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
 #   googlescholar    : "http://yourfullgooglescholarurl.com"
   email            : 'chengxiang666@ruc.edu.cn'
+  wechet           : 'rmbscx'
 #   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
 #   uri              :
 #   bitbucket        :
