--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
   #   url: /year-archive/
     
   - title: "CV"
-    url: /assests/CV0502.pdf # /cv/
+    url: /assets/CV0502.pdf # /cv/
     
   # - title: "Guide"
   #   url: /markdown/
