--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Xiang Cheng"
+  name             : "Charlie Cheng"
   avatar           : "profile.png"
   bio              : "I am a third-year undergraduate student from Renmin University of China, with aspirations to pursue a PhD in Information Systems."
   location         : "Beijing, China"
