--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Charlie Cheng"
   avatar           : "profile.png"
-  bio              : "I am a third-year undergraduate student from Renmin University of China, with aspirations to pursue a PhD in Information Systems."
+  bio              : "I am an undergraduate student from Renmin University of China, with aspirations to pursue a PhD in Information Systems (24 fall)."
   location         : "Beijing, China"
 #   employer         :
 #   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
