--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ author:
 #   github           : "academicpages"
 #   google_plus      :
 #   keybase          :
-  instagram        : "@xcharliecheng"
+  instagram        : "xcharliecheng"
 #   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
 #   lastfm           :
 #   linkedin         :
