--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   # instagram        : "xcharliecheng"
 #   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
 #   lastfm           :
-#   linkedin         :
+  linkedin         : "http://linkedin.com/in/xiang-charlie-cheng"
 #   orcid            : "http://orcid.org/yourorcidurl"
 #   pinterest        :
 #   soundcloud       :
