--- a/_config.yml
+++ b/_config.yml
@@ -87,8 +87,8 @@ author:
 #   employer         :
 #   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
 #   googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            : 'charliecheng@nyu.edu'
-  wechet           : 'xcharliecheng'
+  email            : 'xccheng@umd.edu'
+  # wechet           : 'xcharliecheng'
 #   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
 #   uri              :
 #   bitbucket        :
